--- a/MusicPlayer.DAL/MusicPlayer.DAL.csproj
+++ b/MusicPlayer.DAL/MusicPlayer.DAL.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="EF\Initializer.cs" />
     <Compile Include="Entities\Album.cs" />
+    <Compile Include="Entities\Artists.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
