--- a/MusicPlayer.DAL/MusicPlayer.DAL.csproj
+++ b/MusicPlayer.DAL/MusicPlayer.DAL.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Configurations\AlbumConfig.cs" />
     <Compile Include="Configurations\ArtistConfig.cs" />
+    <Compile Include="Configurations\PlaylistConfig.cs" />
     <Compile Include="EF\Initializer.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
