--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Command.cs" />
     <Compile Include="DelegateComand.cs" />
     <Compile Include="Model\Tracks.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
