Create ViewModel class

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -78,7 +78,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DelegateComand.cs" />
-    <Compile Include="Model\Tracks.cs" />
+    <Compile Include="Model\AlbumViewModel.cs" />
+    <Compile Include="Model\ArtistViewModel.cs" />
+    <Compile Include="Model\PlaylistViewMode.cs" />
+    <Compile Include="Model\TrackViewMode.cs" />
+    <Compile Include="Model\UserViewMode.cs" />
+    <Compile Include="Model\СategoryViewMode.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
