--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -118,8 +118,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Assets\" />
+    <Resource Include="Assets\Logo3.png" />
+    <Resource Include="Assets\Logo4.png" />
+    <Resource Include="Assets\LogoMain.png" />
+    <Resource Include="Assets\MainPicture.jpg" />
+    <Resource Include="Assets\NoPhoto.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets')" />
