--- a/Client/packages.config
+++ b/Client/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
+  <package id="taglib-sharp-netstandard2.0" version="2.1.0" targetFramework="net472" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net472" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
 </packages>
