--- a/MusicPlayer.BLL/MusicPlayer.BLL.csproj
+++ b/MusicPlayer.BLL/MusicPlayer.BLL.csproj
@@ -48,10 +48,15 @@
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="DTO\СategoryDTO.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
-    <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MusicPlayer.DAL\MusicPlayer.DAL.csproj">
+      <Project>{e6e557f5-6a2f-4110-8114-7bcc0631caa7}</Project>
+      <Name>MusicPlayer.DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
